# ersatz

./: .gitignore  Cargo.toml  README.md  cargo-check-updates
data/: example.ers
scripts/examples/: example.ers
src/: entity.rs  ersatz.rs  lib.rs  logger.rs  parser.rs  reaction.rs  site.rs
src/cli/: describe.rs  ersatz.cli  main.rs  mod.rs  validate.rs
